--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -9,7 +9,6 @@ body{
     color: #86878b;
     font-size: 14px;
 
-
 }
 h2{
     font-family: 'Raleway',sans-serif;
@@ -141,4 +140,12 @@ p.download__p2{
     color: #ffffff;
     padding: 10px
 
+}
+.pricing_back{
+    background: #f5f5f5;
+    height: 883px;
+    text-align: center;
+}
+.pricing{
+    padding: 109px 0;
 }
