--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -3,12 +3,13 @@
 *{
     margin: 0;
     font-weight: 400;
-}
-body{
-    font-family: 'Open Sans',sans-serif;
-    color: #86878b;
     font-size: 14px;
+    font-family: 'Open Sans',sans-serif;
+    box-sizing: border-box;
+}
 
+body{
+    color: #86878b;
 }
 h2{
     font-family: 'Raleway',sans-serif;
@@ -16,6 +17,11 @@ h2{
     font-size: 36px;
     color: #212121;
     text-align: center;
+}
+h3{
+    font-size: 20px;
+    font-weight: 700;
+    color: #333333;
 }
 h2::after{
     content: '';
@@ -34,20 +40,50 @@ h2.__white::after{
     background-color: #ffffff;
     margin: 22px auto 29px;
 }
-.icon{
-    width: 1em;
-    height: 1em;
-    fill: currentColor;
+
+input,textarea,button{
+    outline: none;
 }
-._icon{
-    display: none;
+input,textarea{
+    padding: 10px 12px;
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid #d6d6d6;
 }
-/*-------------------------------benefit block------------------------------*/
-h3{
-    font-size: 20px;
-    font-weight: 700;
-    color: #333333;
+textarea{
+    line-height: 1.4;
+    resize: none;
 }
+button{
+    border: none;
+    background-color: transparent;
+}
+.button{
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+    border: 2px solid #ff9b51;
+    background-color: #ff9b51;
+    color: #ffffff;
+    font-size: 15px;
+    font-weight: 600;
+    min-width: 135px;
+    border-radius: 3px;
+    cursor: pointer;
+    box-shadow: 1px 2px 2px #d6d6d6;
+}
+.button._outline{
+    background-color: transparent;
+    border-radius: 0;
+    border-color: #ffffff;
+    box-shadow: none;
+}
+
+._text-center{
+    text-align: center;
+}
+
 .row{
     display: flex;
     justify-content: space-between;
@@ -56,17 +92,31 @@ h3{
 .cell{
     padding: 0 20px;
 }
-.benefit{
-    padding: 110px 0;
-}
 .container{
     max-width: 1110px;
     margin: 0 auto;
+    padding: 110px 0;
 }
-.benefit__p{
+._indent{
     margin-bottom: 80px;
-    text-align: center;
 }
+._icon{
+    display: none;
+}
+.icon{
+    width: 1em;
+    height: 1em;
+    fill: currentColor;
+}
+p._light{
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+    font-size: 16px;
+    color: rgba(255,255,255,.8);
+    margin-bottom: 33px;
+}
+
+/*--------------------------------------------------------------------------------------------*/
 .benefit__image_wrap{
     display: inline-flex;
     border: 2px solid #ff8b38;
@@ -86,233 +136,193 @@ h3{
     color: #ff8b38;
     font-size: 32px;
 }
-.benefit{
-    text-align: center;
+.download .container{
+    padding: 68px 0;
 }
-/*-------------------------------- download block--------------------------------*/
-.download__image{
-    height: 320px;
+.download_bg{
+    background-color: rgba(0,0,0,.4);
+}
+.download{
     background-image: url('../image/city.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
 }
-.download__color{
-    background-color: rgba(0,0,0,0.4);
-    height: 320px;
-
+.contact .container{
+    padding: 101px 0;
 }
-
-.download__text{
-    padding: 66px 0;
+.contact__row{
+    margin-bottom: 45px;
 }
-.download__wrap1{
-    border: 1px solid #f5f5f5;
-    width: 135px;
-    height: 42px;
-    margin: 0 auto;
-}
-.download__wrap2{
-    border: 1px solid #d9dbd7;
-    width: 133px;
-    height: 40px;
-    margin: 0 auto;
-}
-p.download__p1{
-    text-align: center;
-    font-family: 'Raleway',sans-serif;
-    font-weight: 300;
-    font-size: 16px;
-    color: #afaca7;
-    margin-bottom: 33px;
-}
-p.download__p2{
-    text-align: center;
-    font-weight: 600;
-    font-size: 15px;
-    color: #ffffff;
-    padding: 10px
-
-}
-/*------------------------ links block-----------------------------*/
-.links i{
-    padding: 0 12px;
-}
-p.links__p{
-    color: #707070;
-    text-align: center;
-    font-size: 12px;
-}
-.links{
-    background-color: #000000;
-    height: 100px;
-
-}
-.links__image{
-    padding-top: 35px;
-    margin: 0 auto 6px;
-    text-align: center;
-    color: #cccccc;
-    font-size: 24px;
-
-}
-/*-------------------------- pricing block--------------------*/
-.pricing_back{
-    background: #f5f5f5;
-    height: 883px;
-    text-align: center;
-}
-.pricing{
-    padding-top: 109px;
-
-}
-.pricing_row{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-end;
-
-}
-.description{
-    height: 59px;
-    background: #333333;
-    border-bottom: 1px solid #f5f5f5;
-
-}
-.pricing__table{
-    width: 343px;
-
-}
-.sentence{
-    height: 100px;
-    background: #333333;
-    border-bottom: 1px solid #f5f5f5;
-
-}
-.day_price{
-    height: 51px;
-    background: #333333;
-}
-.orange__line13{
-    height: 5px;
-    background: #ff8b38;
-}
-.orange__line2{
-    height:40px;
-    background: #ff8b38;
-}
-.other_block{
-    background: #ffffff;
-    height: 40px;
-    border-bottom: 1px solid #f5f5f5;
-
-
-}
-p.description_p{
-    font-family: "Open Sans",sans-serif;
-    font-weight: bold;
-    font-size: 20px;
-    color: #ffffff;
-    padding-top: 17px;
-
-}
-p.sentence__p{
-    font-family: 'Raleway',sans-serif;
-    font-weight: bold;
-    color: #ffffff;
-    font-size: 88px;
-
-}
-
-p.day_price__p{
-    font-family: 'Open Sans', sans-serif;
-    font-style: italic;
-    font-weight: 600;
-    font-size: 14px;
-    color: #999999;
-    padding-top: 14px;
-}
-p.orange__line2__p{
-    font-family: 'Open Sans', sans-serif;
-    font-weight: bold;
-    font-size: 14px;
-    color: #ffffff;
-    text-transform: uppercase;
-    padding-top: 10px;
-}
-p.other_block__p{
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 400;
-    font-size: 14px;
-    text-transform: uppercase;
-    color: #86878b;
-    padding-top: 11px;
-
-}
-/*--------------------------------- Social Media---------------------------------------*/
-.social_media{
-    height: 105px;
-    box-shadow: 0 3px 3px -3px rgba(0, 0, 0, .2);
-}
-.social_media_content{
-    display:flex;
-    flex-direction: row;
-}
-h4.social_media__h4{
-    font-family: 'Open Sans', sans-serif;
-    font-weight: bold;
-    font-size: 20px;
-    color: #000000;
-    text-transform: capitalize;
-    padding-top: 17px;
-}
-.social_media__p{
-    padding-top: 4px;
-}
-.social_media_h4_p{
-    padding-left: 13px;
-}
-.social_media_icon{
-    color: #cccccc;
-    font-size: 46px;
-    justify-content: center;
-    margin: 29px auto 0;
-}
-svg.facebook{
-    margin-left: 77px;
-}
-/*---------------------------------forms-------------------------*/
-.contact{
-    padding-top: 97px;
-    height: 612px;
-}
-.name_form{
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 400;
-    font-size: 14px;
-    color:#bdbdbd;
-    width: 527px;
-    height: 32px;
-    border-top:none;
-    border-right: none;
-    border-left: none;
-    text-transform: capitalize;
-    margin-bottom: 30px;
-    border-color: #d6d6d6;
-}
-textarea{
-    margin-left: 67px;
-    resize: none;
-    border-top:none;
-    border-right: none;
-    border-left: none;
-    border-color: #d6d6d6;
-}
-.form_direction{
+.contact__cell{
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    width: 50%;
 }
-.row_contact{
-    display: flex;
-    flex-direction: row;
+.contact__field{
+    width: 100%;
 }
+.footer{
+    background-color: #000000;
+}
+.footer .container{
+    padding: 40px 0;
+}
+.footer_icon{
+    font-size: 24px;
+    color: #cccccc;
+}
+.footer_p{
+    font-size: 12px;
+    color: rgba(255,255,255,.5);
+
+}
+
+/*------------------------ links block-----------------------------*/
+/*.links i{*/
+/*    padding: 0 12px;*/
+/*}*/
+/*p.links__p{*/
+/*    color: #707070;*/
+/*    text-align: center;*/
+/*    font-size: 12px;*/
+/*}*/
+/*.links{*/
+/*    background-color: #000000;*/
+/*    height: 100px;*/
+
+/*}*/
+/*.links__image{*/
+/*    padding-top: 35px;*/
+/*    margin: 0 auto 6px;*/
+/*    text-align: center;*/
+/*    color: #cccccc;*/
+/*    font-size: 24px;*/
+
+/*}*/
+/*-------------------------- pricing block--------------------*/
+/*.pricing_back{*/
+/*    background: #f5f5f5;*/
+/*    height: 883px;*/
+/*    text-align: center;*/
+/*}*/
+/*.pricing{*/
+/*    padding-top: 109px;*/
+
+/*}*/
+/*.pricing_row{*/
+/*    display: flex;*/
+/*    flex-direction: row;*/
+/*    justify-content: space-between;*/
+/*    align-items: flex-end;*/
+
+/*}*/
+/*.description{*/
+/*    height: 59px;*/
+/*    background: #333333;*/
+/*    border-bottom: 1px solid #f5f5f5;*/
+
+/*}*/
+/*.pricing__table{*/
+/*    width: 343px;*/
+
+/*}*/
+/*.sentence{*/
+/*    height: 100px;*/
+/*    background: #333333;*/
+/*    border-bottom: 1px solid #f5f5f5;*/
+
+/*}*/
+/*.day_price{*/
+/*    height: 51px;*/
+/*    background: #333333;*/
+/*}*/
+/*.orange__line13{*/
+/*    height: 5px;*/
+/*    background: #ff8b38;*/
+/*}*/
+/*.orange__line2{*/
+/*    height:40px;*/
+/*    background: #ff8b38;*/
+/*}*/
+/*.other_block{*/
+/*    background: #ffffff;*/
+/*    height: 40px;*/
+/*    border-bottom: 1px solid #f5f5f5;*/
+
+
+/*}*/
+/*p.description_p{*/
+/*    font-family: "Open Sans",sans-serif;*/
+/*    font-weight: bold;*/
+/*    font-size: 20px;*/
+/*    color: #ffffff;*/
+/*    padding-top: 17px;*/
+
+/*}*/
+/*p.sentence__p{*/
+/*    font-family: 'Raleway',sans-serif;*/
+/*    font-weight: bold;*/
+/*    color: #ffffff;*/
+/*    font-size: 88px;*/
+
+/*}*/
+
+/*p.day_price__p{*/
+/*    font-family: 'Open Sans', sans-serif;*/
+/*    font-style: italic;*/
+/*    font-weight: 600;*/
+/*    font-size: 14px;*/
+/*    color: #999999;*/
+/*    padding-top: 14px;*/
+/*}*/
+/*p.orange__line2__p{*/
+/*    font-family: 'Open Sans', sans-serif;*/
+/*    font-weight: bold;*/
+/*    font-size: 14px;*/
+/*    color: #ffffff;*/
+/*    text-transform: uppercase;*/
+/*    padding-top: 10px;*/
+/*}*/
+/*p.other_block__p{*/
+/*    font-family: 'Open Sans', sans-serif;*/
+/*    font-weight: 400;*/
+/*    font-size: 14px;*/
+/*    text-transform: uppercase;*/
+/*    color: #86878b;*/
+/*    padding-top: 11px;*/
+
+/*}*/
+/*--------------------------------- Social Media---------------------------------------*/
+/*.social_media{*/
+/*    height: 105px;*/
+/*    box-shadow: 0 3px 3px -3px rgba(0, 0, 0, .2);*/
+/*}*/
+/*.social_media_content{*/
+/*    display:flex;*/
+/*    flex-direction: row;*/
+/*}*/
+/*h4.social_media__h4{*/
+/*    font-family: 'Open Sans', sans-serif;*/
+/*    font-weight: bold;*/
+/*    font-size: 20px;*/
+/*    color: #000000;*/
+/*    text-transform: capitalize;*/
+/*    padding-top: 17px;*/
+/*}*/
+/*.social_media__p{*/
+/*    padding-top: 4px;*/
+/*}*/
+/*.social_media_h4_p{*/
+/*    padding-left: 13px;*/
+/*}*/
+/*.social_media_icon{*/
+/*    color: #cccccc;*/
+/*    font-size: 46px;*/
+/*    justify-content: center;*/
+/*    margin: 29px auto 0;*/
+/*}*/
+/*svg.facebook{*/
+/*    margin-left: 77px;*/
+/*}*/
