--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -111,6 +111,7 @@ button{
     width: 1em;
     height: 1em;
     fill: currentColor;
+    color: #cccccc;
 }
 .base_bg{
     background-color: #f5f5f5;
@@ -146,15 +147,21 @@ p._light{
 }
 .social_media{
     box-shadow: 0 1px 3px rgba(0,0,0,.38);
+    position: relative;
 }
 .social_media .container{
     padding: 18px 0;
 }
 .social_media__flex {
     display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 .social_media__h3{
     margin-bottom: 3px;
+}
+.social_media__icon{
+    font-size: 48px;
 }
 .benefit__image_wrap{
     display: inline-flex;
@@ -227,6 +234,44 @@ span.pricing__dolor{
     font-size: 34px;
     font-weight: 700;
 }
+.reviews__border{
+    position: relative;
+    border: 1px solid #f5f5f5;
+    border-radius: 4px;
+    background-color: #f5f5f5;
+    width: 273px;
+    height: 132px;
+    text-align: left;
+}
+.reviews__border__text{
+    padding: 18px 10px;
+    font-style: italic;
+}
+.triangle_down {
+    position: absolute;
+    left: 8%;
+    width: 0;
+    height: 0;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-top: 15px solid #f5f5f5 ;
+}
+.reviews__img{
+    position: absolute;
+    bottom: -74%;
+    width: 70px;
+    height: 70px;
+    background-image: url('../image/face.jpg');
+    background-repeat: no-repeat;
+}
+.reviews__border__p{
+    position: absolute;
+    left: 32%;
+    bottom: -48%;
+    font-weight: bold;
+    font-size: 20px;
+    color: #333333;
+}
 
 .download .container{
     padding: 68px 0;
@@ -263,7 +308,7 @@ span.pricing__dolor{
 }
 .footer__icon{
     font-size: 24px;
-    color: #cccccc;
+
     margin: 0 12px;
 }
 .footer__title{
