--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -15,6 +15,11 @@
 
 body{
     color: #86878b;
+
+}
+a{
+    text-decoration: none;
+
 }
 h2{
     font-family: 'Raleway',sans-serif;
@@ -37,15 +42,22 @@ h2::after{
     margin: 22px auto 24px;
 }
 h2.__white{
-    text-align: center;
     color: #ffffff;
-
 }
 h2.__white::after{
     background-color: #ffffff;
     margin: 22px auto 29px;
 }
-
+h2._left_white{
+    color: #ffffff;
+    text-align: left;
+    margin-top: 22px;
+}
+h2._left_white::after{
+    background-color: #ffffff;
+    text-align: left;
+    margin: 32px 0 34px ;
+}
 input,textarea,button{
     outline: none;
 }
@@ -113,6 +125,9 @@ button{
     fill: currentColor;
     color: #cccccc;
 }
+.social_media a{
+
+}
 .base_bg{
     background-color: #f5f5f5;
 }
@@ -151,21 +166,55 @@ p._light{
     display: flex;
     align-items: center;
 }
-.header__p{
-    font-weight: 600;
-    rgba(255,255,255,.69);
-}
 .header__indent{
     padding: 0 22px;
 }
-.nav{
+.header a{
+    font-weight: 600;
+    color: rgba(255,255,255,.69);
+}
+.main{
     background-image: url('../image/city-3.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
 }
-.nav__bg{
+.main__bg{
     background-color: rgba(0,0,0,.52);
+}
+.main__width{
+    width: 400px;
+}
+.main__border_try{
+    border-radius: 3px 3px 0 0;
+    background-color: #f5f5f5;
+}
+.main h3{
+    color: #333333;
+    text-transform: capitalize;
+    padding: 13px 0;
+}
+.main__border_form{
+    background-color: #ffffff;
+    padding: 14px 0;
+
+}
+span.free{
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 700;
+    font-size: 20px;
+    color: var(--primari-color);
+    text-transform: uppercase;
+}
+.main .contact__field{
+    width: 80%;
+    margin: 18px 0;
+}
+.main__button_get{
+    height: 54px;
+    width: 360px;
+    box-shadow: none;
+    border-radius: 0 0 3px 3px;
 }
 .social_media{
     box-shadow: 0 1px 3px rgba(0,0,0,.38);
@@ -287,19 +336,12 @@ p.pricing__period__p{
     color: rgba(255,255,255,.5);
 
 }
-p.pricing__worth_p{
-
-}
 span.pricing__dolor{
     font-family: 'Raleway',sans-serif;
     font-size: 34px;
     font-weight: 700;
 }
-.reviews{
-    height: 590px;
-}
 .reviews__border{
-    position: relative;
     border: 1px solid #f5f5f5;
     border-radius: 4px;
     background-color: #f5f5f5;
@@ -307,41 +349,29 @@ span.pricing__dolor{
     height: 132px;
     text-align: left;
 }
+.reviews__border__text::after{
+    content:'';
+    width: 0;
+    height: 0;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-top: 15px solid red ;
+}
 .reviews__border__text{
+    position: relative;
     padding: 18px 10px;
     font-style: italic;
 }
+.reviews__position{
+    display: flex;
+}
 .triangle_down {
-    position: absolute;
-    left: 8%;
     width: 0;
     height: 0;
     border-left: 10px solid transparent;
     border-right: 10px solid transparent;
     border-top: 15px solid #f5f5f5 ;
 }
-.reviews__img{
-    position: absolute;
-    bottom: -74%;
-    width: 70px;
-    height: 70px;
-    background-image: url('../image/face.jpg');
-    background-repeat: no-repeat;
-}
-.reviews__border__p{
-    position: absolute;
-    left: 32%;
-    bottom: -48%;
-    font-weight: bold;
-    font-size: 20px;
-    color: #333333;
-}
-.reviews__position{
-    position: absolute;
-    left: 32%;
-    bottom: -64%;
-}
-
 .download .container{
     padding: 68px 0;
 }
@@ -377,12 +407,10 @@ span.pricing__dolor{
 }
 .footer__icon{
     font-size: 24px;
-
     margin: 0 12px;
 }
 .footer__title{
     font-size: 12px;
     color: rgba(255,255,255,.5);
     margin-top: 7px;
-
 }
