--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -216,6 +216,7 @@ p._light{
     width: 500px;
 }
 .main__width{
+    margin-right: 10px;
     margin-top:30px;
     width: 400px;
 }
@@ -228,17 +229,16 @@ p._light{
     text-transform: capitalize;
     padding: 13px 0;
 }
+span.free{
+     font-family: 'Open Sans', sans-serif;
+     font-weight: 700;
+     font-size: 20px;
+     color: var(--primari-color);
+     text-transform: uppercase;
+ }
 .main__border_form{
     background-color: #ffffff;
     padding: 14px 0;
-}
-
-span.free{
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 700;
-    font-size: 20px;
-    color: var(--primari-color);
-    text-transform: uppercase;
 }
 .main__field{
     width: 80%;
